chor(optimize): adjust according to CR notes
related to #OPT-428